Issue #129: improve unified/non-unified processing.