@@ -10,56 +10,51 @@
  * Contributors:                                                                                                      *
  *    Mike Millson - initial API and implementation                                                                   *
  *********************************************************************************************************************/
-package org.eclipselabs.garbagecat.domain.jdk;
+package org.eclipselabs.garbagecat.domain.jdk.unified;
 
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import org.eclipselabs.garbagecat.domain.ThrowAwayEvent;
+import org.eclipselabs.garbagecat.domain.BlockingEvent;
+import org.eclipselabs.garbagecat.domain.ParallelEvent;
+import org.eclipselabs.garbagecat.domain.jdk.ShenandoahCollector;
 import org.eclipselabs.garbagecat.util.jdk.JdkMath;
+import org.eclipselabs.garbagecat.util.jdk.JdkRegEx;
 import org.eclipselabs.garbagecat.util.jdk.JdkUtil;
 import org.eclipselabs.garbagecat.util.jdk.unified.UnifiedRegEx;
+import org.eclipselabs.garbagecat.util.jdk.unified.UnifiedUtil;
 
 /**
  * <p>
- * CONSIDER_CLASS_UNLOADING_CONC_MARK
+ * UNIFIED_SHENANDOAH_INIT_UPDATE_REFS
  * </p>
  * 
  * <p>
- * Logging output at the beginning of gc log when using the Shenandoah collector.
+ * Initializes the update references phase. It does almost nothing except making sure all GC and applications threads
+ * have finished evacuation, and then preparing GC for next phase. This is the third pause in the cycle, the shortest of
+ * them all[1].
+ * 
+ * [1]<a href="https://wiki.openjdk.java.net/display/shenandoah/Main">Shenandoah GC</a>
  * </p>
  * 
  * <h2>Example Logging</h2>
  * 
- * <p>
- * 1) With <code>-Xlog:gc*:file=&lt;file&gt;</code>:
- * </p>
- * 
  * <pre>
- * [[0.001s][info][gc] Consider -XX:+ClassUnloadingWithConcurrentMark if large pause times are observed on class-unloading sensitive workloads
- * </pre>
- * 
- * <p>
- * 2) With <code>-Xlog:gc*:file=&lt;file&gt;:time,uptimemillis</code>.
- * </p>
- * 
- * <pre>
- * [2019-02-05T14:47:31.090-0200][2ms] Consider -XX:+ClassUnloadingWithConcurrentMark if large pause times are observed on class-unloading sensitive workloads
+ * [5.312s][info][gc] GC(110) Pause Init Update Refs 0.005ms
  * </pre>
  * 
  * @author <a href="mailto:mmillson@redhat.com">Mike Millson</a>
  * 
  */
-public class ShenandoahConsiderClassUnloadingConcMarkEvent extends ShenandoahCollector implements ThrowAwayEvent {
-
+public class UnifiedShenandoahInitUpdateRefsEvent extends ShenandoahCollector
+        implements UnifiedLogging, BlockingEvent, ParallelEvent {
     /**
      * Regular expressions defining the logging.
      */
-    private static final String _REGEX = "^" + UnifiedRegEx.DECORATOR
-            + " Consider -XX:\\+ClassUnloadingWithConcurrentMark if large pause times are "
-            + "observed on class-unloading sensitive workloads[ ]*$";
+    private static final String _REGEX = "^" + UnifiedRegEx.DECORATOR + " Pause Init Update Refs "
+            + JdkRegEx.DURATION_MS + "[ ]*$";
 
-    private static Pattern PATTERN = Pattern.compile(_REGEX);
+    public static final Pattern PATTERN = Pattern.compile(_REGEX);
 
     /**
      * Determine if the logLine matches the logging pattern(s) for this event.
@@ -71,6 +66,11 @@ public class ShenandoahConsiderClassUnloadingConcMarkEvent extends ShenandoahCol
     public static final boolean match(String logLine) {
         return PATTERN.matcher(logLine).matches();
     }
+
+    /**
+     * The elapsed clock time for the GC event in microseconds (rounded).
+     */
+    private long eventTime;
 
     /**
      * The log entry for the event. Can be used for debugging purposes.
@@ -88,27 +88,38 @@ public class ShenandoahConsiderClassUnloadingConcMarkEvent extends ShenandoahCol
      * @param logEntry
      *            The log entry for the event.
      */
-    public ShenandoahConsiderClassUnloadingConcMarkEvent(String logEntry) {
+    public UnifiedShenandoahInitUpdateRefsEvent(String logEntry) {
         this.logEntry = logEntry;
         Matcher matcher = PATTERN.matcher(logEntry);
         if (matcher.find()) {
-            if (matcher.group(2).matches(UnifiedRegEx.UPTIMEMILLIS)) {
-                timestamp = Long.parseLong(matcher.group(13));
-            } else if (matcher.group(2).matches(UnifiedRegEx.UPTIME)) {
-                timestamp = JdkMath.convertSecsToMillis(matcher.group(12)).longValue();
+            eventTime = JdkMath.convertMillisToMicros(matcher.group(UnifiedRegEx.DECORATOR_SIZE + 1)).intValue();
+            long time = UnifiedUtil.calculateTime(matcher);
+            if (!isEndstamp()) {
+                timestamp = time;
             } else {
-                if (matcher.group(15) != null) {
-                    if (matcher.group(15).matches(UnifiedRegEx.UPTIMEMILLIS)) {
-                        timestamp = Long.parseLong(matcher.group(17));
-                    } else {
-                        timestamp = JdkMath.convertSecsToMillis(matcher.group(16)).longValue();
-                    }
-                } else {
-                    // Datestamp only.
-                    timestamp = JdkUtil.convertDatestampToMillis(matcher.group(2));
-                }
+                timestamp = time - JdkMath.convertMicrosToMillis(eventTime).longValue();
             }
         }
+    }
+
+    /**
+     * Alternate constructor. Create detail logging event from values.
+     * 
+     * @param logEntry
+     *            The log entry for the event.
+     * @param timestamp
+     *            The time when the GC event started in milliseconds after JVM startup.
+     * @param duration
+     *            The elapsed clock time for the GC event in microseconds.
+     */
+    public UnifiedShenandoahInitUpdateRefsEvent(String logEntry, long timestamp, int duration) {
+        this.logEntry = logEntry;
+        this.timestamp = timestamp;
+        this.eventTime = duration;
+    }
+
+    public long getDurationMicros() {
+        return eventTime;
     }
 
     public String getLogEntry() {
@@ -116,10 +127,22 @@ public class ShenandoahConsiderClassUnloadingConcMarkEvent extends ShenandoahCol
     }
 
     public String getName() {
-        return JdkUtil.LogEventType.SHENANDOAH_CONSIDER_CLASS_UNLOADING_CONC_MARK.toString();
+        return JdkUtil.LogEventType.UNIFIED_SHENANDOAH_INIT_UPDATE_REFS.toString();
+    }
+
+    @Override
+    public Tag getTag() {
+        return Tag.UNKNOWN;
     }
 
     public long getTimestamp() {
         return timestamp;
+    }
+
+    public boolean isEndstamp() {
+        // default assumes gc,start not logged (e.g. not preprocessed)
+        boolean isEndStamp = true;
+        isEndStamp = !logEntry.matches(UnifiedRegEx.TAG_GC_START);
+        return isEndStamp;
     }
 }
